--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -34,6 +34,7 @@ body {
 ol, ul {
 	list-style: none;
 }
+
 blockquote, q {
 	quotes: none;
 }
@@ -86,13 +87,17 @@ h2{
 }
 nav ul {
 	display: flex;
-	align-items: center;
-	list-style-type: none;
-
+	border-bottom: none;
+	
 }
 nav li {
 	padding: 0 10px;
 	font-size: 1.2em;
+
+}
+nav ul li a {
+	text-decoration: none;
+	color: inherit;
 }
 
 li:hover {
@@ -138,7 +143,7 @@ li:hover {
 
 }
 #contact {
-	width: 50%;
+width: 50%;
 margin: auto;
 }
 #contact > * {
@@ -185,4 +190,28 @@ footer nav ul {
 	justify-content: flex-end;
 	margin: 2em
 }
+.filters {
+	display: flex;
+	justify-content: center;
+  }
+button {
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	font-family: "Syne";
+	font-weight: 700;
+	color: #1d6154;
+	background-color: white;
+	margin: 2em 5px;
+	text-align: center;
+	border-radius: 60px;
+	border: 1px solid #1d6154;
+	padding: 10px 20px;
+  }
+  
+  button:hover {
+	background-color: #1d6154;
+	color: white;
+  }
 
+  
