--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -23,6 +23,10 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
+html {
+	scroll-behavior: smooth;
+  }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -88,6 +92,7 @@ h2{
 nav ul {
 	display: flex;
 	border-bottom: none;
+	list-style-type: none;
 	
 }
 nav li {
@@ -130,6 +135,17 @@ li:hover {
 	text-align: center;
 	margin-bottom: 1em;
 }
+/* STYLE DU BOUTTON MODIFIER " */
+.edit-btn {
+	display: inline-flex;
+	align-items: center;
+	margin: 0 5px; /* Ajustez la marge selon vos besoins */
+	text-align: center;
+	border: none;
+	background: none;
+	padding: 0;
+}
+/*******************StYLE DE LA GALERIE********************/
 .gallery {
 	width: 100%;
 	display: grid;
@@ -140,8 +156,9 @@ li:hover {
 
 .gallery img {
 	width: 100%;
-
 }
+
+/************************PARITE CONTACT*********************/
 #contact {
 width: 50%;
 margin: auto;
@@ -159,6 +176,9 @@ margin: auto;
 	display: flex;
 	flex-direction: column;
 }
+input#nameContact {
+	width: auto;
+  }
 
 #contact input {
 	height: 50px;
@@ -173,6 +193,10 @@ margin: auto;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
+form input[type="submit"]:hover {
+  background-color: #0E2F28;
+  color: white;
+}
 
 input[type="submit"]{
 	font-family: 'Syne';
@@ -185,11 +209,13 @@ input[type="submit"]{
 	border-radius: 60px ;
 }
 
+/*********FOOTER*********/
 footer nav ul {
 	display: flex;
 	justify-content: flex-end;
 	margin: 2em
 }
+/*******filtre**********/
 .filters {
 	display: flex;
 	justify-content: center;
@@ -214,4 +240,254 @@ button {
 	color: white;
   }
 
+  /* Création du  modale */
+.modale {
+	display: none;
+	position: fixed;
+	align-items: center;
+	justify-content: center;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color:#0000004D;
+  }
+  
+  .containerModale {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 43%;
+	height: 95%;
+	border-radius: 10px;
+	background-color:#FFFFFF;
+	position: relative;
+  }
+  
+  .xmark-modale2 {
+	position: absolute;
+	top: 20px;
+	right: 20px;
+	cursor: pointer;
+  }
+  
+  .fa-xmark {
+	position: absolute;
+	top: 20px;
+	right: 20px;
+	cursor: pointer;
+	font-size: 21px;
+  }
+  
+  .modale .title {
+	font-size: 26px;
+	font-weight: 400;
+	margin: 40px 0;
+	font-family: work sans;
+	color: #000000;
+  }
+  
+  .separation {
+	width: 70%;
+	height: 1px;
+	background-color: #1d6154;
+	margin-top: 30px;
+  }
+  
+  .galleryModale {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(15%, 1fr)); 
+	grid-auto-rows: minmax(50px, auto);
+	grid-gap: 30px 10px;
+	width: 70%;
+	height: 60%;
+  }
+  
+  .galleryModale figure {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	position: relative;
+  }
+  
+  .galleryModale img {
+	width: 100%;
+	height: auto;
+	object-fit: cover;
+  }
+  
+  .btnValidate {
+	background-color: #A7A7A7;
+	color: white;
+	width: 40%;
+	margin-bottom: 40px;
+	border: 1px solid #A7A7A7;
+  }
+  
+  .btnValidate:hover {
+	background-color: #A7A7A7; 
+	color: white;
+  }
+  
+  .btnModale {
+	background-color: #1d6154;
+	color: white;
+	width: 40%;
+  }
+  
+  .btnModale:hover {
+	background-color: #0E2F28;
+	color: white;
+  }
+  
+  /**************************AFFICHAGE APRES CONEXION *************/
+  
+  .editionMode {
+	background-color: black;
+	width: 100%;
+	height: 60px;
+	color: white;
+	text-align: center;
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+  }
+  
+  .editionMode i {
+	margin-right: 10px;
+	font-weight: 400;
+  }
+  
+  .h2-logo-modifierDiv {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: row-reverse;
+  }
+  
+  .h2-logo-modifierDiv i {
+	margin-left: 30px;
+	margin-right: 10px;
+	font-weight: 400;
+  }
+  .h2-logo-modifierDiv button {
+	all: unset;
+	cursor: pointer;
+  }
+  
+  .fa-trash-can {
+	width: 18px;
+	height: 19px;
+	font-size: 14px;
+	font-weight: 400;
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	cursor: pointer;
+	background-color: #000000;
+	color: white;
+	line-height: 17px;
+  }
+  
+  .fa-trash-can::before {
+	position: absolute;
+	top: 1px;
+	left: 2px;
+	width: 100%;
+	height: 100%;
+  }
+  
+  /*********** Modale Ajout photo*******************/
+  
+  .modalAddWork {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 43%;
+	height: 95%;
+	border-radius: 10px;
+	background-color: white;
+	position: relative;
+  }
+  
+  .fa-arrow-left {
+	position: absolute;
+	top: 20px;
+	left: 20px;
+	cursor: pointer;
+	font-size: 21px;
+  }
+  
+  .containerFile  {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 70%;
+	height: 33%;
+	gap: 10px;
+	background-color: #E8F1F6;
+  }
+  
+  .formAddWork .containerFile label {
+	background-color: #B9C5CC;
+	text-align: center;
+	color: white ;
+	border-radius: 15px;
+	padding : 5px 10px;
+	width: 40%;
+  }
+  
+  .containerFile input {
+	display: none;
+  }
+  
+  .fa-image {
+	font-size: 3rem;
+	color: #B9C5CC;
+  }
+  
+  .containerFile img {
+	display: none;
+	max-width: 100%;
+	height: 100%;
+  }
+  
+  #modaleAdd h2{
+	padding:60px 0 40px 0;
+	font-size: 26px;
+	font-weight: 400;
+	font-family: work sans;
+	color: black;
+  }
+  
+  .formAddWork {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	height: 80%;
+	gap: 20px;
+  }
+  
+  .formAddWork select, input[type="text"] {
+	width: 70%;
+	height: 50px;
+	box-shadow: 0px 4px 14px 0px #00000017;
+	border: none;
+	text-align: left;
+  }
+  
+  .formAddWork label {
+	text-align: left;
+	width: 70%;
+  }
+  
+  
+  
+
+  
   
